finally truncated correctly (text-center)

--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -39,6 +39,9 @@ body {
   text-shadow: rgb(255, 106, 0) 1px 0px 0px, rgb(255, 106, 0) 0.540302px 0.841471px 0px, rgb(255, 106, 0) -0.416147px 0.909297px 0px, rgb(255, 106, 0) -0.989992px 0.14112px 0px, rgb(255, 106, 0) -0.653644px -0.756802px 0px, rgb(255, 106, 0) 0.283662px -0.958924px 0px, rgb(255, 106, 0) 0.96017px -0.279415px 0px;  
 }
 
-.article-body p {
-  word-break: normal;
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  display: block;
 }
